<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsActivity">

    <Button
        android:id="@+id/default_settings_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/default_settings_button"
        android:onClick="setPreferencesToDefault"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/confirm_settings_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/confirm_settings_button"
        android:onClick="updatePreferencesState"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/default_settings_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/settings_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/main_settings_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/main_settings_text"
                android:textStyle="bold" />

            <Switch
                android:id="@+id/mix_question_switch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/mix_questions_switch" />

            <Switch
                android:id="@+id/mix_answer_switch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/mix_answers_switch" />

            <Switch
                android:id="@+id/show_answers_switch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/show_answers_switch" />

            <Switch
                android:id="@+id/show_failed_questions_switch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/show_failed_switch" />

            <TextView
                android:id="@+id/how_many_question_to_ask_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/question_pull_size_hint" />

            <EditText
                android:id="@+id/question_pull_size_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:focusable="auto"
                android:hint="@string/question_pull_size_hint_text_field"
                android:inputType="numberSigned" />

            <TextView
                android:id="@+id/interface_type_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/mini_question_layout_text" />

            <LinearLayout
                android:id="@+id/mini_interface_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/type_buttons_layout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <CheckBox
                        android:id="@+id/default_type_check"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/mini_question_layout_check_default" />

                    <CheckBox
                        android:id="@+id/classic_type_check"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/mini_question_layout_check_classic" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/textView4"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:text="@string/mini_question_pull_size"
                                android:textSize="10dp" />

                            <TextView
                                android:id="@+id/textView2"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:gravity="right"
                                android:text="@string/mini_question_percent"
                                android:textSize="10dp" />

                        </LinearLayout>

                        <TextView
                            android:id="@+id/textView3"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:text="@string/mini_question_current"
                            android:textSize="10dp" />

                        <TextView
                            android:id="@+id/textView8"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@string/mini_question_text"
                            android:textSize="12dp" />

                        <Button
                            android:id="@+id/button"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/mini_question_answer_1"
                            android:textSize="12dp" />

                        <Button
                            android:id="@+id/button2"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/mini_question_answer_2"
                            android:textSize="12dp" />

                        <Button
                            android:id="@+id/button3"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/mini_question_answer_3"
                            android:textSize="12dp" />

                        <Button
                            android:id="@+id/button4"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/mini_question_answer_4"
                            android:textSize="12dp" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/textView7"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:gravity="left"
                                android:text="@string/mini_question_pull_size"
                                android:textSize="10dp" />

                            <TextView
                                android:id="@+id/textView5"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:gravity="right"
                                android:text="@string/mini_question_percent"
                                android:textSize="10dp" />

                        </LinearLayout>

                        <TextView
                            android:id="@+id/textView6"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:text="@string/mini_question_current"
                            android:textSize="10dp" />

                        <TextView
                            android:id="@+id/textView9"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@string/mini_question_text"
                            android:textSize="12dp" />

                        <CheckBox
                            android:id="@+id/checkBox3"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/mini_question_answer_1"
                            android:textSize="12dp" />

                        <CheckBox
                            android:id="@+id/checkBox4"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/mini_question_answer_2"
                            android:textSize="12dp" />

                        <CheckBox
                            android:id="@+id/checkBox5"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/mini_question_answer_3"
                            tools:textSize="12dp" />

                        <CheckBox
                            android:id="@+id/checkBox6"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/mini_question_answer_4"
                            tools:textSize="12dp" />

                        <Button
                            android:id="@+id/button5"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/mini_question_next_button"
                            android:textSize="12dp" />

                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>

            <TextView
                android:id="@+id/interface_settings_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/interface_settings_text"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/delay_time_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/delayed_period_hint" />

            <EditText
                android:id="@+id/delayed_period_filed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/delayed_period_hint_text_field"
                android:inputType="numberSigned" />

            <TextView
                android:id="@+id/text_size_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_size_hint" />

            <EditText
                android:id="@+id/text_size_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/text_size_hint_text_field"
                android:inputType="numberSigned" />

            <Switch
                android:id="@+id/multi_checking_switch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/multi_check_switch" />

            <Switch
                android:id="@+id/show_wrong_questions_switch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/show_wrong_questions" />

            <Switch
                android:id="@+id/developer_mode_switch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/developer_mode" />

        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>